--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "backend:install": "cd udagram-api && npm install",
         "backend:build": "cd udagram-api && npm run build",
         "backend:deploy": "cd udagram-api && npm run deploy",
-        "frontend:deploy": "cd udagram-frontend && npm run deploy"
+        "frontend:deploy": "cd udagram-frontend && npm run deploy",
+		"frontend:test": "cd udagram-frontend && npm run test",
+		"backend:test": "cd udagram-api && npm run test"
+		
     },
     "devDependencies": {}
 }
